# kiota-python

./: .gitignore  .pylintrc  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  kiota-python.ps1  projects-config.json  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements_dev.txt
.azure-pipelines/: cd-publish-python.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/policies/: kiota-abstractions-python-branch-protection.yml
.github/workflows/: auto-merge-dependabot.yml  build.yml  ci.yml  codeql-analysis.yml  publish.yml  release.yml
kiota_abstractions/: __init__.py  _version.py  api_client_builder.py  api_error.py  base_request_builder.py  base_request_configuration.py  default_query_parameters.py  get_path_parameters.py  headers_collection.py  multipart_body.py  native_response_handler.py  request_adapter.py  request_configuration.py  request_headers.py  request_information.py  request_option.py  response_handler.py  utils.py
kiota_abstractions/authentication/: __init__.py  access_token_provider.py  allowed_hosts_validator.py  api_key_authentication_provider.py  base_bearer_token_authentication_provider.py
kiota_abstractions/serialization/: __init__.py  additional_data_holder.py  composed_type_wrapper.py  parsable.py  parsable_factory.py  parse_node.py  parse_node_factory.py  parse_node_factory_registry.py  parse_node_helper.py  parse_node_proxy_factory.py  serialization_writer.py  serialization_writer_factory.py  serialization_writer_factory_registry.py  serialization_writer_proxy_factory.py  untyped_boolean.py  untyped_dict.py  untyped_float.py  untyped_integer.py  untyped_list.py  untyped_node.py  untyped_none.py  untyped_string.py
kiota_abstractions/store/: __init__.py  backed_model.py  backing_store.py  backing_store_factory.py  backing_store_factory_singleton.py  backing_store_parse_node_factory.py  backing_store_serialization_writer_proxy_factory.py  in_memory_backing_store.py  in_memory_backing_store_factory.py
tests/: conftest.py  test_base_request_builder.py  test_multipart_body.py  test_request_header.py  test_request_information.py
tests/authentication/: test_api_key_authentication_provider.py  test_base_bearer_token_authentication.py
tests/store/: test_backed_model.py  test_backing_store_factory_singleton.py  test_in_memory_backing_store.py
(+81 files in other folders)
